WinZip durch freie Software 7-Zip ersetzt

--- a/trunk/docs/beleg3/systemhandbuch.tex
+++ b/trunk/docs/beleg3/systemhandbuch.tex
@@ -7,7 +7,7 @@ zu beziehen.
 
 Je nach verf"ugbarem Entpackprogramm sollte man die neuste Version im .tar.gz, 
 .tar.bz2 (zu entpacken mit z.b. GNU tar, \pdfurl{http://www.gnu.org/software/tar/}) oder .zip-Format 
-(zu entpacken mit z. B. WinZIP, \pdfurl{http://www.winzip.de/}) herunterladen und entpacken.
+(zu entpacken mit z. B. 7-Zip, \pdfurl{http://www.7-zip.org/}) herunterladen und entpacken.
 
 Nun muss der Inhalt des Archivs auf das Server in einen vom Webserver verwalteten Ordner 
 abgelegt werden, z. B. in (oder unterhalb) von /var/www auf einem Standard-Debian System.
