--- a/trunk/docs/beleg3/tests.tex
+++ b/trunk/docs/beleg3/tests.tex
@@ -315,7 +315,9 @@
 \end{longtable}
 
 \subsection{Zeitplan und Verantwortlichkeiten}
-Verantwortlich für die Vorbereitung, Durchführung und Auswertung der Tests waren Frank Wilhelm und Sven Eckelmann. Abhängigkeiten zwischen den einzelnen Testfällen besteht nicht. Alle Tests wurden mehrfach zwischen 30.04. und 26.06.2006 durchgeführt. Ein abschließender Test erfolgte am 26.06.2006.
+Verantwortlich für die Vorbereitung, Durchführung und Auswertung der Tests waren Frank Wilhelm und Sven Eckelmann. Alle Tests wurden mehrfach zwischen 30.04. und 26.06.2006 durchgeführt. Ein abschließender Test erfolgte am 26.06.2006.
+
+\includegraphics{testplan}
 
 \section{Systemtest}
 \begin{longtable}{|c|p{8cm}|c|c|}
@@ -352,4 +354,4 @@ Verantwortlich für die Vorbereitung, Durchführung und Auswertung der Tests war
 \end{longtable}
 
 \section{Abschlußeinschätzung}
-Die beim abschließenden Systemtest erhaltenen Ergebnisse stimmen mit den erwarteten Ergebnissen überein. Durch dies kann der Systemtest als erfolgreich angesehen werden. Die in der Spezifikation gesetzten Anforderungen wurden erfüllt. Das System kann aus diesem Grund als einsatzbereit angesehen werden. Eine vollkommene Fehlerfreiheit kann trotz der Tests nicht garantiert werden.
+Für jede Klasse von Eingaben wurde ein Test durchgeführt. Die Funktionen wurden isoliert als Unittest sowie in realer Umgebung getestet. Die beim abschließenden Systemtest erhaltenen Ergebnisse stimmen mit den erwarteten Ergebnissen überein. Durch dies kann der Systemtest als erfolgreich angesehen werden. Die in der Spezifikation gesetzten Anforderungen wurden erfüllt. Das System kann aus diesem Grund als einsatzbereit angesehen werden. Eine vollkommene Fehlerfreiheit kann trotz der Tests nicht garantiert werden.
