--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -27,7 +27,7 @@ Es gibt drei Nutzerklassen:
 \begin{enumerate}
 \item Nutzer:\\
 Nutzer ist jeder, der sich "uber einen Web-Browser auf die Seite begibt um Informationen abzurufen.\\
-Der Nutzer besitzt keinerlei M"oglichkeiten Datenbest"ande anzulegen, zu ver"andern oder zu l"oschen. Er besitzt lediglich Lesezugriff auf die Buchinformationen und Kommentare. \\
+Der Nutzer besitzt keinerlei M"oglichkeiten Datenbest"ande anzulegen, zu ver"andern oder zu l"oschen. Er besitzt lediglich Lesezugriff auf die Literaturinformationen und Kommentare. \\
 
 \item Mitglied:\\
 Das Mitglied ist ein registrierte Nutzer, der sich durch sein Anmelden "uber die grafische Oberfl"ache mit einem LogIn-Namen und einem Passwort als solcher authentifiziert.\\
@@ -46,7 +46,7 @@ Was die Rechte eines Administrators betrifft so sind diese allein auf Grund sein
 Um den Literaturmanager zu starten muss man einen Web-Browser (hier Firefox 1.5.0.4) starten und die passende Internet-Adresse in das URL-Feld eintragen. Die URL kann man beim Administrator erfragen, da er den Web-Server zuvor konfiguriert.
 \subsection{Die Hauptseite}
 Hat man die richtige Web-Adresse eingegeben, so l"adt der Browser folgende Seite:\\
-\includegraphics[scale=0.8]{screen1.pdf}\\
+\includegraphics[scale=0.8]{screen1}\\
 Die Hauptseite ist in vier Segmente aufgeteilt:\\
 \begin{enumerate}
 \item Navigation:\\
@@ -56,11 +56,11 @@ Auf diese beiden Punkte wird sp"ater genauer eingegangen.
 \item Letzte Literatur:\\
 Dieses Segment erm"oglicht einen "Uberblick der zuletzt get"atigten Literatureintr"age.
 \item Suchen:\\
-Die Suchfunktion erm"oglicht eine schnelle Recherche in den vorhandenen Buchdaten. Die genauere Bedienung wird noch erl"autert.
+Die Suchfunktion erm"oglicht eine schnelle Recherche in den vorhandenen Literaturdaten. Die genauere Bedienung wird noch erl"autert.
 \item Einloggen:\\
 Hier kann sich jedes Mitglied mit seinem Login, also einem Namen und seinem Passwort bei dem Literaturmanager anmelden.\\
 Sollte man keinen Login-Name und kein Passwort besitzen so muss man sich bei einem Administrator anmelden.\\
-Auch wenn man sein Passwort vergessen hat, muss man einen Adminsitrator kontaktieren.\\
+Auch wenn man sein Passwort vergessen hat, muss man einen Administrator kontaktieren.\\
 \end{enumerate}
 \subsection{Wie logge ich mich ein?}
 Im Segment Einloggen auf der Hauptseite existieren zwei Editfelder, Login und Passwort.\\
@@ -68,27 +68,27 @@ Man gibt also in das obere Feld seinen Login-Namen und in das zweite Feld sein P
 In der folgenden Abbildung ist der Abschnitt Einloggen einmal vergr"o"sert dargestellt.
 Wir Loggen uns mit dem Namen 'Lazhur' und dem Passwort 'tescht' ein:\\
 \begin{center}
-\includegraphics[scale=1.0]{login.pdf}\\
+\includegraphics[scale=1.0]{login}\\
 \end{center}
 War die Anmeldung erfolgreich so erscheint folgende Anzeige und man ist als Mitglied eingeloggt:\\
-\includegraphics[scale=0.8]{login1.pdf}\\
+\includegraphics[scale=0.8]{login1}\\
 
-\subsection{Wie finde ich ein Buch?}
-Um Informationen zu einem Buchtitel zu erhalten bietet es sich an die Suchfunktion des Literaturmanagers zu nutzen. Hierzu kommen wir kurz auf das Bild des Hauptbildschirm weiter oben zur"uck:\\
+\subsection{Wie finde ich eine Literatur?}
+Um Informationen zu einem Literaturtitel zu erhalten bietet es sich an die Suchfunktion des Literaturmanagers zu nutzen. Hierzu kommen wir kurz auf das Bild des Hauptbildschirm weiter oben zur"uck:\\
 Folgendes Bild verg"o"sert das Suchsegment (3):\\
 \begin{center}
-\includegraphics[scale=2.0]{suche.pdf}\\
+\includegraphics[scale=2.0]{suche}\\
 \end{center}
-Das Prinzip ist ganz einfach. Man gibt ein Stichwort zu einem Buchtitel ein, z.B. ein Wort aus dem Titel oder den Namen des Autors, und dr"uckt den Suche-Button (1).\\
-Gibt man z.B. den Begriff 'Python' ein so erscheinen alle Buchtitel mit diesem Begriff. Die n"achste Abbildung zeigt einmal eine solche Trefferliste:\\
-\includegraphics[scale=0.8]{treffer.pdf}\\
-\subsection{Wie kann ich ein neues Buch anlegen?}
+Das Prinzip ist ganz einfach. Man gibt ein Stichwort zu einem Literaturtitel ein, z. B. ein Wort aus dem Titel oder den Namen des Autors, und dr"uckt den Suche-Button (1).\\
+Gibt man z. B. den Begriff 'Python' ein so erscheinen alle Literaturtitel mit diesem Begriff. Die n"achste Abbildung zeigt einmal eine solche Trefferliste:\\
+\includegraphics[scale=0.8]{treffer}\\
+\subsection{Wie kann ich eine neue Literatur anlegen?}
 Kommen wir nun vom Recherchieren zum bearbeiten und Pflegen der Literaturverwaltung.\\
-Angenommen ein Buch ist nicht in der Literaturverwaltung vorhanden und ein Mitglied m"ochte es darin aufnehmen.\\
+Angenommen eine Literatur ist nicht in der Literaturverwaltung vorhanden und ein Mitglied m"ochte es darin aufnehmen.\\
 Hierzu klicken wir zun"achst im Segment 'Navigation' auf den Punkt 'Literatur', daraufhin erscheint folgendes Fenster:\\
-\includegraphics[scale=0.8]{lit_ins.pdf}\\
+\includegraphics[scale=0.8]{lit_ins}\\
 Dominiert wird das Segment von der Tabelle mit den Literatureintr"agen darunter befinden sich zwei Buttons, die nur dann erscheinen, wenn man sich als Mitglied angemeldet hat.\\
-Der Button 'Literatur hinzuf"ugen' spricht wohl f"ur sich. Er erm"oglicht das hinzuf"ugen eines neuen Buchtitels.\\
-Der Button 'BibTex importieren' erm"oglicht es bereits vorgefertigte Buchbeschreibungen im BibTex-Format zu importieren.\\
+Der Button 'Literatur hinzuf"ugen' spricht wohl f"ur sich. Er erm"oglicht das hinzuf"ugen eines neuen Literaturtitels.\\
+Der Button 'BibTex importieren' erm"oglicht es bereits vorgefertigte Literaturbeschreibungen im BibTex-Format zu importieren.\\
 Klickt man nun auf den Button 'Literatur hinzuf"ugen' erscheint folgendes Formular:\\
-\includegraphics[scale=0.8]{lit_ins1.pdf}\\
+\includegraphics[scale=0.8]{lit_ins1}\\
