Anwenderdokumentation Bedienanleitung für Mitglieder fertig gestellt
es fehlt noch:
kurze Anleitung zur Nutzerverwaltung per graf. Oberfläche
ALSO: Nutzer anlegen, bearbeiten, löschen...

--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -82,6 +82,14 @@ Folgendes Bild verg"o"sert das Suchsegment (3):\\
 Das Prinzip ist ganz einfach. Man gibt ein Stichwort zu einem Literaturtitel ein, z. B. ein Wort aus dem Titel oder den Namen des Autors, und dr"uckt den Suche-Button (1).\\
 Gibt man z. B. den Begriff 'Python' ein so erscheinen alle Literaturtitel mit diesem Begriff. Die n"achste Abbildung zeigt einmal eine solche Trefferliste:\\
 \includegraphics[scale=0.8]{treffer}\\
+\subsection{Die erweiterte Suche}
+Klickt in dem Suchsegments auf den Link 'Erweiterte Suche' so erscheint folgender Bildschirm:\\
+\includegraphics[scale=0.8]{ext_suche}\\
+Die Suchfunktionen richten sich nunmehr auf spezielle Informationen eines Buches, was sich bei sehr gro"sen Datenbest"anden, die sich im Lauf der Zeit anreichern, in Form einer gr"o"seren "Ubersichtlichkeit der Suchtreffer auszahlen k"onnte.\\
+Im Feld 'Titel' gibt man einfach einen Literatur-Titel , ein Wort aus dem Titel oder sogar nur eine kurze Zeichenkette wie 'Algo' ein.\\
+Im Feld 'Autor' funktioniert es genau so, einfach einen Autor oder auch nur Teile seines Namens eingeben und den Button 'Suche' dr"ucken.\\
+Die Volltextsuche sucht, "ahnlich wie die 'normale' Suche auf dem Hauptformular in allen Informationen eines Literaturtitels mit Ausnahme der Kommentare.\\
+
 \subsection{Wie kann ich eine neue Literatur anlegen?}
 Kommen wir nun vom Recherchieren zum bearbeiten und Pflegen der Literaturverwaltung.\\
 Angenommen eine Literatur ist nicht in der Literaturverwaltung vorhanden und ein Mitglied m"ochte es darin aufnehmen.\\
@@ -92,3 +100,74 @@ Der Button 'Literatur hinzuf"ugen' spricht wohl f"ur sich. Er erm"oglicht das hi
 Der Button 'BibTex importieren' erm"oglicht es bereits vorgefertigte Literaturbeschreibungen im BibTex-Format zu importieren.\\
 Klickt man nun auf den Button 'Literatur hinzuf"ugen' erscheint folgendes Formular:\\
 \includegraphics[scale=0.8]{lit_ins1}\\
+Will man nun einen Eintrag in das Literaturverzeichnis machen, so muss man alle Felder ihrer Beschreibung gem"a"s auszuf"ullen und den Button '"Ubernehmen' dr"ucken.\\
+F"ur einen von der Anwendung akzeptierten Eintrag sind die Felder 'Titel' und 'Autor' zwingend auszuf"ullen, sonst erscheint folgende Fehlermeldung:\\
+\includegraphics[scale=0.8]{err}\\
+
+\subsection{Literatur mit BibTeX anlegen}
+W"ahlt man statt dem Web-Formular zum Literatur-Import den Import via BibTeX, so sieht man sich folgendem Formular konfrontiert:\\
+\includegraphics[scale=0.8]{bibtex}\\
+Auch hier deuten zwei Segmente auf zwei M"oglichkeiten die BibTeX-Beschreibung zu importieren.\\
+Die erste M"oglichkeit ist es, ein lokale BibTeX-Datei vom Computer des Mitglieds einzulesen. Hierzu klickt man auf 'Durchsuchen' und w"ahlt in dem lokalen Verzeichnisbaum die BibTeX-Datei aus und dr"uckt den "Offnen-Button. Folgendes Bild zeigt den "Offnen-Dialog indem man die Datei ausw"ahlen kann:\\
+\begin{center}
+\includegraphics[scale=0.8]{import1}\\
+\end{center}
+Nachdem man die BibTeX-Datei ausgew"ahlt hat, dr"uckt man noch den Button 'Imprtieren' und ein neuer Literatureintrag wurde get"atigt.\\[0.4cm]
+Die zweite M"oglichkeit ist die direkte Eingabe der BibTeX-Beschreibung in das Memo-Feld im zweiten, unteren Segment des Import-Formulars.\\
+Folgendes Bild zeigt ein Beispiel:\\
+\includegraphics[scale=0.8]{import2}\\
+Nach der Eingabe der Beschreibung muss man noch den Button 'Importieren' dr"ucken und ein neues Buch mit Titel 'BibTeX kurzgefasst' wurde in die Literaturverwaltung aufgenommen.\\
+Der efolgreiche Import wird durch folgende Anzeige signalisiert:\\
+\includegraphics[scale=0.8]{import_succ}\\
+
+\subsection{Wie bearbeite ich eine Literatur?}
+M"ochte man einen Literatureintrag "andern, etwa weil man einen Fehler bei der Erstellung gemacht hat oder um eine Aktualisierung vorzunehmen, muss man sich zun"achst die Literaturtabelle anzeigen lassen, danach den zu "andernden Eintrag ausw"ahlen und den Button 'Bearbeiten' dr"ucken.\\
+\includegraphics[scale=0.8]{bearb1}\\
+Anschlie"send erscheint ein Formular "ahnlich dem Formular 'Literatur erstellen' nur stehen bereits Literatur-Information in den Feldern.
+Im folgenden Bild wollen wir eine "Anderung an unserem erstellten Literatur-Titel 'BibTeX kurzgefasst' vornehmen, wir wollen die ISBN bon 9-99999-999-9 in 0-00000-000-0 "andern und Verlag in SwP umbenennen:\\
+\includegraphics[scale=0.8]{bearb2}\\
+Anschlie"send noch '"Uebernehmen' dr"ucken und unsere Literaturdaten wurden ge"andert. Best"atigt wird die "Anderung durch folgende Meldung:\\
+\includegraphics[scale=0.8]{bearb3}\\
+
+\subsection{Wie l"osche ich eine Literatur?}
+Ist es n"otig einen Literatureintrag zu l"oschen, so w"ahlt man ihn wie auch beim 'Bearbeiten' in der Literaturliste aus, l"asst sich also die betreffenden Literaturdetails anzeigen, und bet"atigt den Button 'L"oschen':\\
+\includegraphics[scale=0.8]{del_lit}\\
+Daraufhin erscheint die Aufforderung den L"oschvorgang zu best"atigen. Sollten man es sich anders "uberlegt haben, so bet"atigt man NICHT den Best"atigen-Button sonder verl"asst "uber das seitliche Men"u den L"oschprozess.\\
+Sollte man sich sicher sein, dass man den Eintrag l"oschen will, so klickt man auf den Button 'Best"atigen':\\
+\includegraphics[scale=0.8]{sure}\\
+
+
+\subsection{Wie kommentiere ich einen Literatureintrag?}
+Oftmals ist ein kurzer Kommentar eines Lesers eines Buches oder einer Zeitschrift wesentlich aussagekr"aftiger als alle fachlichen Beschreibungen, die man findet.\\
+M"ochte man nun einen solchen Kommentar zu einem Literatureintrag verfassen, etwa weil man das jeweilige Medium bereits gelesen oder zu Recherchen herangezogen hat muss man zun"achst, wie auch beim l"oschen und bearbeiten eines Eintrages, sich die Literaturdetails anzeigen lassen.\\
+Bei niedriegeren Aufl"osungen, etwa 800x600 oder noch niedriger, k"onnte es n"otig sein mit der Laufleiste rechts von den Details in den unteren Bereich des Segments zu scrollen.\\
+Dort findet man ein Textfeld worin man seinen Kommentar verfassen kann, anschlie"send best"atigt man ihn mit dem Button 'Kommentar versenden':\\
+\includegraphics[scale=0.8]{comment1}\\
+Auch hier erfolgt eine visuelle Best"atigung "uber die erfolgreiche Abgabe eines Kommentars:
+\includegraphics[scale=0.8]{comment2}\\
+Mit dem Button 'Zur"uck' gelangt man zu den Literaturdetails des gerade kommentierten Titels zur"uck.\\
+
+\subsection{Wie "andere ich einen Kommentar?}
+Will man einen seiner Kommentare zu einem Literaturtitel "andern, muss man den gew"unschten Titel in der Literaturliste ausw"ahlen um sich die Details anzeigen zu lassen.\\
+Scrollt man nun zu den Kommentaren, so sieht man in dem Textfeld, welches bereits beim Erstellen eines Kommentars n"otig war, den Kommentar, den man zuvor abgegeben hatte.\\
+M"ochte man den zuvor abgegeben Kommentar "andern, so formatiert man ihn jediglich in diesem Textfeld und bet"atigt erneut 'Kommentar senden'.\\
+\includegraphics[scale=0.8]{comment3}\\
+Es erscheint eine Best"atigung "ahnlich der, die beim Verfassen eines Kommentares erscheint.\\
+
+\subsection{Wie l"osche ich einen Kommentar?}
+Ist es n"otig einen seiner verfassten Kommentare zu l"oschen, muss man sich wieder die Literaturdetails des Literaturtitels anzeigen lassen, worin der zu l"oschende Kommentare steht.\\
+Sucht man den Kommentar, hinter dem ein Link mit der Aufschrift l"oschen steht und bet"atigt diesen. Die folgende Abbildung soll dies verdeutlichen:\\
+\includegraphics[scale=0.8]{comment4}\\
+Bet"atigt man diesen Link, so erscheint als n"achstes eine L"oschbest"atigung. Hier gilt Selbiges wie auch beim L"oschen von Literatur, will man den Vorgang abbrechen geht man einfach "uber die Men"uleiste am linken Browser-Rand in ein anderes Men"u. Ist man sich sicher, dass man den Kommentar l"oschen will so bet"atigt man den Button.\\
+\includegraphics[scale=0.8]{comment5}\\
+Nachdem man den Best"atigen-Button benutzt hat, erscheint eine L"oschbest"atigung.
+
+\subsection{Wie kann ich meine Mitgliedsdaten "andern?}
+Grunds"atzlich gilt, dass jedes Mitglied die eigenen Mitgliedsdaten "andern darf.\\ Man benutzt einfach im Navigationssegment den Men"upunkt 'Nutzer'. Tut man dies, so erscheint folgende "Ubersicht:\\
+\includegraphics[scale=0.8]{nutzer1}\\
+Wie man leicht erkennen kann, hat man als Mitglied jediglich das Recht die eigenen Nutzerdaten zu sehen und zu "andern.\\
+Bet"atigt man nun den Button 'Bearbeiten' so erh"alt man Zugang zu den eigenen Mitgliedsinformationen.\\
+\includegraphics[scale=0.8]{nutzer2}\\
+M"ochte man beispielsweise seine E-Mail-Adresse "andern, l"oscht man einfach die alte Adresse raus und schreibt seine neue hinein, danach best"atigt man mit dem Button '"Ubernehmen'.\\
+Jedes Mitglied kann alle eigenen Daten, bis auf die 'Rechte', auf diese Wiese "andern. Allerdings ist das "Andern der Rechte einzig und allein Administratoren "uberlassen.\\
+Danach erscheint eine Best"atigung "uber die "Anderung der Nutzerdaten.\\
