- Quellcode wieder in Teilbeleg3 aktiviert - Tippfehler in Anwenderdokumentation entfernt - Systemhandbuch mit TODOs erweitert und mysqldump-Hinweis hinzugefügt

--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -112,7 +112,7 @@ Die erste M"oglichkeit ist es, ein lokale BibTeX-Datei vom Computer des Mitglied
 \begin{center}
 \includegraphics[scale=0.8]{import1}\\
 \end{center}
-Nachdem man die BibTeX-Datei ausgew"ahlt hat, dr"uckt man noch den Button 'Imprtieren' und ein neuer Literatureintrag wurde get"atigt.\\[0.4cm]
+Nachdem man die BibTeX-Datei ausgew"ahlt hat, dr"uckt man noch den Button 'Importieren' und ein neuer Literatureintrag wurde get"atigt.\\[0.4cm]
 Die zweite M"oglichkeit ist die direkte Eingabe der BibTeX-Beschreibung in das Memo-Feld im zweiten, unteren Segment des Import-Formulars.\\
 Folgendes Bild zeigt ein Beispiel:\\
 \includegraphics[scale=0.8]{import2}\\
@@ -124,15 +124,15 @@ Der efolgreiche Import wird durch folgende Anzeige signalisiert:\\
 M"ochte man einen Literatureintrag "andern, etwa weil man einen Fehler bei der Erstellung gemacht hat oder um eine Aktualisierung vorzunehmen, muss man sich zun"achst die Literaturtabelle anzeigen lassen, danach den zu "andernden Eintrag ausw"ahlen und den Button 'Bearbeiten' dr"ucken.\\
 \includegraphics[scale=0.8]{bearb1}\\
 Anschlie"send erscheint ein Formular "ahnlich dem Formular 'Literatur erstellen' nur stehen bereits Literatur-Information in den Feldern.
-Im folgenden Bild wollen wir eine "Anderung an unserem erstellten Literatur-Titel 'BibTeX kurzgefasst' vornehmen, wir wollen die ISBN bon 9-99999-999-9 in 0-00000-000-0 "andern und Verlag in SwP umbenennen:\\
+Im folgenden Bild wollen wir eine "Anderung an unserem erstellten Literatur-Titel 'BibTeX kurzgefasst' vornehmen, wir wollen die ISBN von 9-99999-999-9 in 0-00000-000-0 "andern und Verlag in SwP umbenennen:\\
 \includegraphics[scale=0.8]{bearb2}\\
-Anschlie"send noch '"Uebernehmen' dr"ucken und unsere Literaturdaten wurden ge"andert. Best"atigt wird die "Anderung durch folgende Meldung:\\
+Anschlie"send noch '"Ubernehmen' dr"ucken und unsere Literaturdaten wurden ge"andert. Best"atigt wird die "Anderung durch folgende Meldung:\\
 \includegraphics[scale=0.8]{bearb3}\\
 
 \subsection{Wie l"osche ich eine Literatur?}
 Ist es n"otig einen Literatureintrag zu l"oschen, so w"ahlt man ihn wie auch beim 'Bearbeiten' in der Literaturliste aus, l"asst sich also die betreffenden Literaturdetails anzeigen, und bet"atigt den Button 'L"oschen':\\
 \includegraphics[scale=0.8]{del_lit}\\
-Daraufhin erscheint die Aufforderung den L"oschvorgang zu best"atigen. Sollten man es sich anders "uberlegt haben, so bet"atigt man NICHT den Best"atigen-Button sonder verl"asst "uber das seitliche Men"u den L"oschprozess.\\
+Daraufhin erscheint die Aufforderung den L"oschvorgang zu best"atigen. Sollten man es sich anders "uberlegt haben, so bet"atigt man NICHT den Best"atigen-Button sondern verl"asst "uber das seitliche Men"u oder den Zurück-Knopf des Browsers den L"oschprozess.\\
 Sollte man sich sicher sein, dass man den Eintrag l"oschen will, so klickt man auf den Button 'Best"atigen':\\
 \includegraphics[scale=0.8]{sure}\\
 
@@ -168,6 +168,6 @@ Grunds"atzlich gilt, dass jedes Mitglied die eigenen Mitgliedsdaten "andern darf
 Wie man leicht erkennen kann, hat man als Mitglied jediglich das Recht die eigenen Nutzerdaten zu sehen und zu "andern.\\
 Bet"atigt man nun den Button 'Bearbeiten' so erh"alt man Zugang zu den eigenen Mitgliedsinformationen.\\
 \includegraphics[scale=0.8]{nutzer2}\\
-M"ochte man beispielsweise seine E-Mail-Adresse "andern, l"oscht man einfach die alte Adresse raus und schreibt seine neue hinein, danach best"atigt man mit dem Button '"Ubernehmen'.\\
+M"ochte man beispielsweise seine E-Mail-Adresse "andern, l"oscht man einfach die alte Adresse raus und schreibt seine neue hinein. Danach best"atigt man mit dem Button '"Ubernehmen'.\\
 Jedes Mitglied kann alle eigenen Daten, bis auf die 'Rechte', auf diese Wiese "andern. Allerdings ist das "Andern der Rechte einzig und allein Administratoren "uberlassen.\\
 Danach erscheint eine Best"atigung "uber die "Anderung der Nutzerdaten.\\
