--- a/trunk/docs/beleg3/systemhandbuch.tex
+++ b/trunk/docs/beleg3/systemhandbuch.tex
@@ -97,10 +97,6 @@ include/login.php &  Verwaltet die Session des Users und der damit entstehenden 
 \hline
 include/sqldb\_mysql.php & Startet eine Verbindung zum Datenbanksystem her und w"ahlt eine Datenbank & 7212\\
 \hline
-design/liman.css & Stylesheets & 2097\\
-\hline
-design/unittest.css & Stylesheets & 246\\
-\hline
 \end{longtable}
 
 
@@ -108,8 +104,7 @@ design/unittest.css & Stylesheets & 246\\
 
 
 Es wird empfohlen, regelm"a"sig eine Sicherung der Datenbank anzulegen. Das System bietet diese Funktion nicht direkt an,
-sondern verweist auf das Programm phpMyAdmin. Um es zu starten, rufen sie die Datei ............ in Ihrem Installationsverzeichnis auf.
-Zust"andig f"ur die Sicherung der Datenbank ist der Link "Exportieren" in der Datenbankansicht. 
+sondern verweist auf das Programm phpMyAdmin (\pdfurl{http://www.phpmyadmin.net/}). Zust"andig f"ur die Sicherung der Datenbank ist der Link ``Exportieren'' in der Datenbankansicht.
 
 {TODO Screenshot}
 
@@ -124,3 +119,11 @@ Wenn Sie Senden ausw"ahlen, wird die Ausgabe als Datei gespeichert, was f"ur den
 Ausgabe auf dem Bildschirm wiedergegeben. 
 Falls sie "ofters Sicherungen anlegt, ist eine weitere Option "ZIP / GZIP Komprimieren" sehr praktisch. Wenn Sie dies ausw"ahlen wird die Datei mit ZIP 
 komprimiert.
+
+Eine weitere Möglichkeit, besonders für die automatisierte Sicherung der Datenbank, bietet das Programm mysqldump, welches ein Teil der MySQL-Anwendungen ist. Eine genau Erklärung über die Funktionsweise von mysqldump ist in den Handbüchern zu MySQL enthalten (\pdfurl{http://www.mysql.com/doc/de/mysqldump.html}).
+
+{TODO Was tun, wenn der Webserver ``Could not connect to SQL server. Please inform Webmaster'' bringt?}
+
+{TODO Was tun, wenn Daten nie geschrieben/geändert/gelöscht werden?}
+
+{TODO Was tun, wenn User nach dem einloggen direkt wieder ausgeloggt werden?}
