--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -171,3 +171,9 @@ Bet"atigt man nun den Button 'Bearbeiten' so erh"alt man Zugang zu den eigenen M
 M"ochte man beispielsweise seine E-Mail-Adresse "andern, l"oscht man einfach die alte Adresse raus und schreibt seine neue hinein. Danach best"atigt man mit dem Button '"Ubernehmen'.\\
 Jedes Mitglied kann alle eigenen Daten, bis auf die 'Rechte', auf diese Wiese "andern. Allerdings ist das "Andern der Rechte einzig und allein Administratoren "uberlassen.\\
 Danach erscheint eine Best"atigung "uber die "Anderung der Nutzerdaten.\\
+
+\subsection{Ein"uhrung in die Nutzerverwaltung "uber die grafische Oberfl"ache der Literaturverwaltung}
+Grunds"atzlich gilt, dass man "anderungen in den Nutzerdaten der Mitglieder ausschlie"slich als Administrator durchf"uhren darf.\\
+Um in die Nutzerverwaltung zu gelangen, befolgt man zun"achst die selben Anweisungen, wie sie im Punkt 3.4.4 'Wie logge ich mich ein?' aufgef"uhrt sind.\\
+Hat man sich eingeloggt geht man im Segment Navigation (siehe 3.4.2 'Die Hauptseite') in das Untermenu 'Nutzer'.\\
+Im Gegensatz zur Mitgliedsoberfl"ache, sind nun alle Mitglieder aufgelistet, die 
