- Sitzungsprotokoll 28.06.2006 in Teilbeleg3 eingefügt - Tippfehler in Dokumentation der Nutzerverwaltung korrigiert

--- a/trunk/docs/beleg3/arbeitsaufgaben.tex
+++ b/trunk/docs/beleg3/arbeitsaufgaben.tex
@@ -369,3 +369,23 @@
 			\item Protokolant: Sven Eckelmann
 		\end{itemize}
 \newpage
+		\section{Sitzungsprotokoll 28.06.2006}
+		\subsection{Anwesende}
+		\begin{itemize}
+			\item Simon Wunderlich
+			\item Andreas Tröger
+			\item Frank Wilhelm
+		\end{itemize}
+		\subsection{Tagesordnung}
+		\begin{itemize}
+			\item Besprechung Teilbeleg 3
+		\end{itemize}
+			\subsection{Besprechung Teilbeleg 3}
+			\begin{itemize}
+				\item Stand Aufgabenerf"ullung des Teams verglichen
+				\item Details zur Administrationsanleitung besprochen
+			\end{itemize}
+		\begin{itemize}
+			\item Protokolant: Simon Wunderlich
+		\end{itemize}
+\newpage
