--- a/trunk/docs/beleg3/anwenderdokumentation.tex
+++ b/trunk/docs/beleg3/anwenderdokumentation.tex
@@ -177,3 +177,47 @@ Grunds"atzlich gilt, dass man "Anderungen in den Nutzerdaten der Mitglieder auss
 Um in die Nutzerverwaltung zu gelangen, befolgt man zun"achst die selben Anweisungen, wie sie im Punkt 3.4.4 'Wie logge ich mich ein?' aufgef"uhrt sind.\\
 Hat man sich eingeloggt geht man im Segment Navigation (siehe 3.4.2 'Die Hauptseite') in das Untermen"u 'Nutzer'.\\
 Im Gegensatz zur Mitgliedsoberfl"ache, sind nun alle Mitglieder aufgelistet.
+
+\subsection{Wie lege ich einen Nutzer an?}
+Hierzu klicken wir zun"achst im Segment 'Navigation' auf den Punkt 'Nutzer', daraufhin erscheint das Fenster Nutzer:\\
+\includegraphics[scale=0.5]{nutzeranl}\\
+Wenn man hier auf den Button 'Nutzer hinzuf"ugen' klickt, kommt man zu folgendem Formular:\\
+
+\includegraphics[scale=0.5]{nutzeranl2}\\
+Will man nun einen Nutzer hinzuf"ugen, so muss man alle Felder ihrer Beschreibung gem"a"s auszuf"ullen und den Button '"Ubernehmen' 
+dr"ucken. F"ur einen von der Anwendung akzeptierten Eintrag m"ussen alle Felder richtig ausgef"ullt sein, sonst k"onnen folgende Fehlermeldungen 
+erscheinen: (Zur Demonstration sind alle Felder leer, um alle Fehlermeldungen anzuzeigen)\\
+\includegraphics[scale=0.5]{nutzeranl3}\\
+Wenn man die Felder korrekt ausgef"ullt hat und der Nutzer angelegt werden konnte kommt folgende Meldung:\\
+\includegraphics[scale=0.5]{nutzeranl4}\\
+
+\subsection{Wie bearbeite ich einen Nutzer?}
+Um einen bereits angelegten Nutzer zu bearbeiten, klicken wir zun"achst im Segment 'Navigation' auf den Punkt 'Nutzer', daraufhin erscheint das Fenster 
+Nutzer:\\
+\includegraphics[scale=0.5]{nutzerbea}\\
+Wenn man zum Beispiel den Nutzer 'testnutzer' bearbeiten will, so klickt man auf den Bearbeitungsbutton in der jeweiligen Zeile.
+Das schon aus dem Abschnitt 'Wie lege ich einen Nutzer an?' bekannte Formular erscheint und man kann s"amtliche Daten "andern.\\
+\includegraphics[scale=0.5]{nutzerbea2}\\
+Wenn der Nutzer erfolgreich bearbeitet wurde, erscheint folgende Nachricht:\\
+\includegraphics[scale=0.5]{nutzerbea3}\\
+
+\subsection{Wie l"osche ich einen Nutzer?}  
+Um einen Nutzer zu l"oschen, klicken wir zun"achst im Segment 'Navigation' auf den Punkt 'Nutzer', daraufhin erscheint das Fenster 
+Nutzer:\\
+\includegraphics[scale=0.5]{nutzerloe}\\
+Wenn man zum Beispiel den Nutzer 'testnutzer' l"oschen will, so klickt man auf den L"oschbutton in der jeweiligen Zeile.
+Es erscheint eine Frage, ob sie den Nutzer wirklich entfernen wollen:\\
+\includegraphics[scale=0.5]{nutzerloe2}\\
+Wenn der Nutzer entfernt wurde, erscheint folgende Nachricht:\\
+\includegraphics[scale=0.5]{nutzerloe3}\\
+
+\section{Helpsystem}
+Die Nachrichten beim Anlegen, Editieren und L"oschen von Datenbest"anden sind als Hilfestellung v"ollig ausreichend.\\
+Ausserdem sind die Fehlermeldungen, die bei unzureichender Eingabe erscheinen, aussagekr"aftig genug.\\
+
+
+
+
+
+
+
